--- a/Numbers.html
+++ b/Numbers.html
@@ -20,6 +20,8 @@
     <img src="/images/background.jpg" width="100%" height="100%" alt="coffee background">
     <br>
     <h3>our stores</h3>
+    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni repudiandae illo distinctio eos dolore, doloribus officia eaque adipisci molestias necessitatibus laborum atque quidem unde sequi, inventore minima itaque temporibus qui delectus minus obcaecati? Optio nobis recusandae libero aspernatur impedit dolor!</p>
+    <h3>it mes hi hello </h3>
     <br>
     <table style="border: 2px solid black; border-spacing: 20px;" >
         <tr>
